# oresai

./: .envrc  .gitignore  README.md  atlas.hcl  buf.yaml  compose.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_server.yml  release.yml  update-flake-lock.yml
apps/web/client/: AGENT.md
client/: .envrc  .gitignore  AGENT.md
migrations/: 20250930102423_init.sql  20251001093918_password.sql  20251110171156_display_name_nullable.sql  20251110172752_memo_state.sql  20251110173250_fix_typo_satate.sql  atlas.sum
protos/oresai/objects/: article.proto  comment.proto  memo.proto  objects.proto  tag.proto  user.proto
protos/oresai/services/: article.proto  auth.proto  comment.proto  document.proto  memo.proto  organization.proto  user.proto
schemas/: articles.hcl  comments.hcl  memos.hcl  tags.hcl  users.hcl
server/: .env  .env.local  .envrc  .ocamlformat  README.md  dune-project  oresai.opam  schema.hcl  shell.nix
server/app/: config.ml  context.ml  dune  errors.ml  main.ml  server.ml  utils.ml
server/app/handlers/: dune  usecases.ml
server/app/icept/: auth.ml  new.ml  request_logger.ml
server/app/services/: auth.ml  dune  errors.ml
server/app/services/grpc/health/v1/: health.ml
server/app/services/grpc/reflection/v1/: reflection.ml
server/app/services/oresai/services/: auth.ml  user.ml
server/app/usecases/: dune  errors.ml  get_user_by_email.ml  get_user_by_id.ml  get_user_id_from_access_token.ml  register_user.ml  system_ping.ml  user_create_article.ml  user_create_auth_token.ml  user_create_memo.ml  user_list_articles.ml  user_list_memos.ml  user_update_me.ml
server/app/usecases/test/: access_token.ml  dune  errors.ml  get_user_by_email.ml  get_user_by_id.ml  register_user.ml  system_ping.ml  test.ml  user_create_article.ml  user_create_memo.ml
server/conflicts/grpc_conflicts/: dune  grpc_conflicts.ml
server/db/: articles.ml  documents.ml  dune  effects.ml  errors.ml  handler.ml  memos.ml  morph.ml  organizations.ml  tags.ml  user_profiles.ml  users.ml  values.ml
server/db/test/: dbh.ml  dune  errors.ml  test.ml  users.ml
server/db/test/models/: user.ml
server/docs/: DATA_HIERARCHY.md  design.md  hexagonal_architecture_violations.md
server/domains/: dune  errors.ml  morph.ml  validator.ml
server/domains/objects/: article.ml  comment.ml  document.ml  errors.ml  memo.ml  morph.ml  organization.ml  tag.ml  user.ml  user_profile.ml  util.ml
server/domains/objects/testing/: article.ml  dune  memo.ml  tag.ml  user.ml
server/domains/repositories/: article.ml  locator.ml  memo.ml  system.ml  user.ml
server/domains/values/: password.ml  token.ml  url.ml
server/infra/: dune
server/infra/context/: context.ml  dune
server/infra/db/sql/: articles.ml  connection.ml  dune  errors.ml  handler.ml  memos.ml  morph.ml  system.ml  tags.ml  users.ml
server/infra/db/sql/test/: articles.ml  dbh.ml  dune  errors.ml  memos.ml  system.ml  tags.ml  test.ml  users.ml  utils.ml
server/infra/services/jwt/: dune  jwt.ml
server/interface/grpc/: dune  errors.ml  utils.ml
server/interface/grpc/icept/: auth.ml  new.ml  request_logger.ml
server/interface/grpc/services/grpc/health/v1/: health.ml
server/interface/grpc/services/grpc/reflection/v1/: reflection.ml
server/interface/grpc/services/oresai/services/: article.ml  auth.ml  user.ml
server/let/: dune  let.ml
server/logs_compat/: dune  logs_compat.ml
server/main/: config.ml  dune  handler.ml  main.ml  server.ml  utils.ml
server/main/handler/: auth.ml  handler.ml  repository.ml
server/protos/: buf.gen.yaml  buf.yaml  dune  gen_protos.ml
server/servers/: dune  errors.ml  grpc.ml
server/servers/services/: auth.ml  user.ml
server/usecases/: dune  errors.ml  get_user_by_email.ml  get_user_by_id.ml  get_user_id_from_access_token.ml  register_user.ml  user_create_auth_token.ml
server/utils/: dune  let.ml  validator.ml
