opam-version: "2.0"
synopsis: "Write a short description"
maintainer: ["Your name <email@example.com>"]
authors: ["Your name <email@example.com>"]
license: "MIT"
homepage: "https://github.com/your-id/repo"
bug-reports: "https://github.com/your-id/repo/issues"
dev-repo: "git+https://github.com/your-ide/repo.git"
depends: [
  "dune" {>= "3.20.0"}
  "pcre"
  "core"
  "nloge"
  "kdf"
  "mirage-crypto-rng"
  "base64"
  "grpc-eio"
  "h2-eio"
  "caqti-eio"
  "oenv"
  "ppxlib" { < "0.37.0" } # for ppx_rapper
  "caqti-driver-postgresql"
  "ppx_rapper_eio"
  "eio_main"
  "ocaml-protoc-plugin"
  "ppx_string_interpolation"
  "alcotest" { with-test }
  "ppx_inline_test" { with-test }
  "ppx_assert" { with-test }
  "qcheck" { with-test }
]

pin-depends: [
  ["ppx_rapper_eio.dev" "git+https://github.com/roddyyaga/ppx_rapper#5b0e62def2d5cc6cbe3dedec1ecb289bee350f9a" ]
  ["ppx_rapper.dev" "git+https://github.com/roddyyaga/ppx_rapper#5b0e62def2d5cc6cbe3dedec1ecb289bee350f9a" ]
]
