opam-version: "2.0"
synopsis: "Write a short description"
maintainer: ["Your name <email@example.com>"]
authors: ["Your name <email@example.com>"]
license: "MIT"
homepage: "https://github.com/your-id/repo"
bug-reports: "https://github.com/your-id/repo/issues"
dev-repo: "git+https://github.com/your-ide/repo.git"
depends: [
  "dune" {>= "3.20.0"}
  "pcre"
  "core"
  "kdf"
  "mirage-crypto-rng"
  "base64"
  "grpc-eio"
  "h2-eio"
  "jwto"
  "caqti-eio"
  "oenv"
  "ppxlib" { < "0.37.0" } # for ppx_rapper
  "caqti-driver-postgresql"
  "ppx_rapper_eio"
  "eio_main"
  "ocaml-protoc-plugin"
  "ppx_string_interpolation"
  "alcotest" { with-test }
  "ppx_inline_test" { with-test }
  "ppx_assert" { with-test }
  "qcheck" { with-test }
]

pin-depends: [
  ["ppx_rapper_eio.dev" "git+https://github.com/roddyyaga/ppx_rapper#5b0e62def2d5cc6cbe3dedec1ecb289bee350f9a" ]
  ["ppx_rapper.dev" "git+https://github.com/roddyyaga/ppx_rapper#5b0e62def2d5cc6cbe3dedec1ecb289bee350f9a" ]
  ["grpc-eio.dev" "git+https://github.com/dialohq/ocaml-grpc#b629b55fc15964c5e9455058725519d3f7cfc9a7"]
  ["grpc.dev" "git+https://github.com/dialohq/ocaml-grpc#b629b55fc15964c5e9455058725519d3f7cfc9a7"]
  ["ocaml-protoc-plugin.dev" "git+https://github.com/Nymphium/ocaml-protoc-plugin#32907893d1097c4ee3358c28aa487b936886405e"]
  ["oenv.dev" "git+https://github.com/Nymphium/oenv#40d13b8bfcb1602a9c2cd91726fe592eed946f21"]
]
